# Ugine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ugine-uml.vpp  ugine-uml.vpp.bak_000f  ugine-uml.vpp.bak_001d
Sandbox/: CMakeLists.txt
Sandbox/src/: PlayerComponent.h  Sandbox.h  player_component.h  sandbox.cpp  sandbox.h
Sandbox/src/Sandbox/: Sandbox.cpp  Sandbox.h
Test/: CMakeLists.txt
Test/src/: Event.cpp  EventDispatcher.cpp  Scene.cpp  Signals.cpp  TextureManager.cpp  Vector.cpp  application_test.cpp  component_test.cpp  event_dispatcher_test.cpp  event_test.cpp  input_test.cpp  mocks.h  pch.h  scene_test.cpp  signals_test.cpp  texture_manager_test.cpp  vector_test.cpp  window_test.cpp
Ugine/: CMakeLists.txt
Ugine/include/Ugine/: Application.h  Component.h  Core.h  Entrypoint.h  GameObject.h  Log.h  Renderer.h  SDLWindow.h  Scene.h  Signals.h  Vector.h  Window.h  input.h  pch.h  platfrom.h  window.h
Ugine/include/Ugine/Event/: Event.h  EventDispatcher.h  EventHandler.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Ugine/include/Ugine/Exception/: Exception.h  WindowException.h
Ugine/include/Ugine/Input/: InputHandler.h
Ugine/include/Ugine/event/: event_handler.h  window_event.h
Ugine/include/Ugine/graphic/: graphic_context.h
Ugine/include/Ugine/ui/: ui.h
Ugine/include/Ugine/utils/: keycode.h  mouse_button.h
Ugine/include/Ugine/window/: input.h  window.h  window2D.h  window_factory.h  window_impl.h  window_visitor.h
Ugine/include/ugine/: application.h  component.h  core.h  entrypoint.h  log.h  renderer.h  scene.h  signals.h  vector.h
Ugine/include/ugine/event/: event.h  event_dispatcher.h  keyboard_event.h  mouse_event.h
Ugine/include/ugine/exception/: exception.h
Ugine/include/ugine/input/: input_handler.h
Ugine/src/: Application.cpp  Application.h  Component.cpp  EventHandler.cpp  GameObject.cpp  InputHandler.cpp  Log.cpp  Log.h  Renderer.cpp  SDLWindow.cpp  Scene.cpp  Ugine.h  Window.cpp  application.cpp  component.cpp  event.cpp  input.cpp  input_handler.cpp  log.cpp  pch.cpp  renderer.cpp  scene.cpp  ui.cpp  window.cpp  window.cpp~
Ugine/src/Ugine/: Application.cpp  Application.h  Entrypoint.h  Signals.h
Ugine/src/graphic/: opengl.cpp  opengl.h
Ugine/src/ui/: imgui.cpp  ui.cpp
Ugine/src/utils/: key_mapping.h  keyboard_mapping.cpp  keyboard_mapping.h
Ugine/src/window/: input.cpp  sdl_input.h  sdl_window.cpp  sdl_window.h  window.cpp  window_factory.cpp
test/: CMakeLists.txt  Event.cpp  EventDispatcher.cpp  Signals.cpp
test/x64/Release/: test.exe.recipe  test.vcxproj.FileListAbsolute.txt
test/x64/Release/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
